--- a/render-production.yaml
+++ b/render-production.yaml
@@ -7,14 +7,14 @@ services:
     plan: free
     branch: master
     buildCommand: pnpm install && pnpm build
-    startCommand: pnpm start
+    startCommand: node dist/_core/index.js
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         value: 10000
       - key: DATABASE_URL
-        value: file:./dev.db
+        value: postgresql://username:password@localhost:5432/dragaan_pro
       - key: TELEGRAM_API_ID
         sync: false
       - key: TELEGRAM_API_HASH
@@ -59,12 +59,12 @@ services:
     plan: free
     branch: master
     buildCommand: pnpm install && pnpm build:worker
-    startCommand: pnpm start:worker
+    startCommand: node dist/worker.js
     envVars:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        value: file:./dev.db
+        value: postgresql://username:password@localhost:5432/dragaan_pro
       - key: TELEGRAM_API_ID
         sync: false
       - key: TELEGRAM_API_HASH
