--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:metro": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
     "build": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:worker": "esbuild server/worker.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/worker.js",
-    "start": "cross-env NODE_ENV=development tsx server/_core/index.ts",
+    "start": "cross-env NODE_ENV=production node dist/_core/index.js",
     "start:worker": "cross-env NODE_ENV=production node dist/worker.js",
     "dev:worker": "cross-env NODE_ENV=development tsx watch server/worker.ts",
     "check": "tsc --noEmit",
@@ -36,9 +36,9 @@
     "@react-navigation/elements": "^2.9.2",
     "@react-navigation/native": "^7.1.25",
     "@tanstack/react-query": "^5.90.12",
-    "@trpc/client": "11.7.2",
-    "@trpc/react-query": "11.7.2",
-    "@trpc/server": "11.7.2",
+    "@trpc/client": "11.10.0",
+    "@trpc/react-query": "11.10.0",
+    "@trpc/server": "11.10.0",
     "@types/pg": "^8.16.0",
     "axios": "^1.13.2",
     "bullmq": "^5.24.0",
@@ -102,7 +102,7 @@
     "better-sqlite3": "^12.6.2",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.31.8",
+    "drizzle-kit": "^0.31.9",
     "esbuild": "^0.25.12",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
@@ -111,7 +111,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
-    "vitest": "^2.1.9",
+    "vitest": "^4.0.18",
     "webpack": "^5.105.0",
     "webpack-cli": "^6.0.1"
   },
